2009-02-16  Les Harris  <lharris@gnome.org>

	* plugins/python/*: Removed obsolete plugin.

2009-02-16  Les Harris  <lharris@gnome.org>

	* src/mud-window.c (mud_window_remove_connection_view): GnomeMud
	picture will now be the correct size when the last view is closed.

2009-02-16  Les Harris  <lharris@gnome.org>

	* src/mud-connection-view.c (mud_connection_view_send_naws): Will no
	longer try to send NAWS when unconnected.
	* src/mud-window.c (mud_window_size_request): Now properly notifies
	each view of size change.

2009-02-16  Les Harris  <lharris@gnome.org>

	* src/mud-connection-view.c (mud_connection_view_disconnect),
	(mud_connection_view_reconnect), (mud_connection_view_send),
	(mud_connection_view_new): Disconnect and Reconnect now completely
	tear down the connection. Reconnect will then instantiate a new
	connection.  Fixed a leak on instantiation where we weren't freeing
	gconf returned strings.
	* src/mud-telnet.[ch] (mud_telnet_init), (mud_telnet_finalize): Make sure
	we properly free all allocated buffers on finalization. Moved
	prev_buffer references into ENABLE_GST blocks as it is only used when
	MSP is enabled.

2009-02-16  Les Harris  <lharris@gnome.org>

	* src/mud-connection-view.c (mud_connection_view_disconnect),
	(mud_connection_view_reconnect): Fixed an issue where the connection
	could get into an inconsistant state.
	* src/mud-telnet.c (mud_telnet_process): Check if buffer exists before
	creating a new buffer.

2009-02-16  Les Harris  <lharris@gnome.org>

	* src/mud-connection-view.c (mud_connection_view_reconnect): Added
	newline to reconnect.
	* src/mud-window.c (mud_window_init): Toolbar connect button now opens
	main connection window.

2009-02-16  Les Harris  <lharris@gnome.org>

	* ui/muds.glade: Changed the default port entry value to 23.

2009-02-16  Les Harris  <lharris@gnome.org>

	* src/mud-connections.c (mud_connections_connect_cb): Connections
	window will now close upon mud connection.
