@@ -1,3 +1,12 @@
-SUBDIRS = python
-
-EXTRA_DIST = test.plugin/Makefile test.plugin/main.c
+EXTRA_DIST = \
+	test.plugin/Makefile \
+	test.plugin/main.c \
+	automapper/Makefile \
+	automapper/map.c \
+	automapper/map.h \
+	automapper/map-link.c \
+	automapper/directions.h \
+	outputwindows/Makefile \
+	outputwindows/main.c \
+	statusbars/Makefile \
+	statusbars/main.c
